@@ -4,6 +4,7 @@
 use Symfony\Component\Console\Application;
 use Zenstruck\Changelog\Command\CreateCommand;
 use Zenstruck\Changelog\Command\InitCommand;use Zenstruck\Changelog\Command\PreviewCommand;
+use Zenstruck\Changelog\Command\ReleaseCommand;
 use Zenstruck\Changelog\Command\UpdateCommand;
 
 set_time_limit(0);
@@ -23,6 +24,7 @@ $application->addCommands([
     new InitCommand(),
     new CreateCommand(),
     new UpdateCommand(),
+    new ReleaseCommand(),
 ]);
 
 $application->setDefaultCommand($default->getName());
